--- a/js/index.html
+++ b/js/index.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="../libs/TrackballControls.js"></script>
     <script type="text/javascript" src="Coche.js"></script>
     <script type="text/javascript" src="Mapa.js"></script>
+    <script type="text/javascript" src="Enemigos.js"></script>
     <script type="text/javascript" src="MyPhysiScene.js"></script>
 
     <style>
