--- a/js/index.html
+++ b/js/index.html
@@ -18,6 +18,9 @@
     <script type="text/javascript" src="Coche.js"></script>
     <script type="text/javascript" src="Mapa.js"></script>
     <script type="text/javascript" src="Enemigos.js"></script>
+    <script type="text/javascript" src="CochesEnemigos.js"></script>
+    <script type="text/javascript" src="MuroPosicion.js"></script>
+    <script type="text/javascript" src="Posiciones.js"></script>
     <script type="text/javascript" src="MyPhysiScene.js"></script>
 
     <style>
@@ -36,9 +39,15 @@
     </div>
     
     <div style="position:absolute; left:30px; top:10px" id="izda">
-        <p>Velocidad: <a id="1"></a> km/h</p>
+        <p>Vuelta <a id="1"></a></p>
+        <p>Posicion. <a id="9"></a></p>
         <p><a id="2"></a></p>
         <p><a id="3"></a></p>
+        <p>Seccion: <a id="4"></a></p>
+        <p>Seccion E.: <a id="5"></a></p>
+        <p>Distancia C1.: <a id="6"></a></p>
+        <p>Distancia C2.: <a id="7"></a></p>
+        <p>Orden E.: <a id="8"></a></p>
     </div>
     
     <div style="position:absolute; right:30px; top:10px" id="dcha">
