--- a/js/index.html
+++ b/js/index.html
@@ -44,9 +44,9 @@
         <p><a id="2"></a></p>
         <p><a id="3"></a></p>
         <p>Seccion: <a id="4"></a></p>
-        <p>Seccion E.: <a id="5"></a></p>
-        <p>Distancia C1.: <a id="6"></a></p>
-        <p>Distancia C2.: <a id="7"></a></p>
+        <p>Seccion E.1: <a id="5"></a></p>
+        <p>Seccion E.2: <a id="6"></a></p>
+        <p>Seccion E.3: <a id="7"></a></p>
         <p>Orden E.: <a id="8"></a></p>
     </div>
     
