--- a/js/index.html
+++ b/js/index.html
@@ -11,6 +11,8 @@
     <!-- Se usa la version de three que viene con physijs -->
     <link rel="stylesheet" href="styles.css">
     <script type="text/javascript" src="./physijs/three.min.js"></script>
+    <script type="module" src="../libs/MTLLoader.js"></script>
+    <script type="module" src="../libs/OBJLoader.js"></script>
     <script type="text/javascript" src="./physijs/physi.js"></script>
     <!-- Todo lo demás igual -->
     <script type="text/javascript" src="../libs/jquery.js"></script>
@@ -21,6 +23,7 @@
     <script type="text/javascript" src="Mapa.js"></script>
     <script type="text/javascript" src="CochesEnemigos.js"></script>
     <script type="text/javascript" src="MuroPosicion.js"></script>
+    <script type="text/javascript" src="Moneda.js"></script>
     <script type="text/javascript" src="Posiciones.js"></script>
     <script type="text/javascript" src="MyPhysiScene.js"></script>
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
