añadido camara y fondo

--- a/js/index.html
+++ b/js/index.html
@@ -13,6 +13,8 @@
     <script type="text/javascript" src="./physijs/three.min.js"></script>
     <script type="module" src="../libs/MTLLoader.js"></script>
     <script type="module" src="../libs/OBJLoader.js"></script>
+    <script type="module" src="../libs/OrbitControls.js"></script>
+    <script type="module" src="../libs/PointerLockControls.js"></script>
     <script type="text/javascript" src="./physijs/physi.js"></script>
     <!-- Todo lo demás igual -->
     <script type="text/javascript" src="../libs/jquery.js"></script>
