--- a/js/index.html
+++ b/js/index.html
@@ -76,6 +76,8 @@
         <br>
         <p>B <i class="fas fa-arrow-right"></i> FRENO DE MANO / BONUS VELOCIDAD</p>
         <p>B <i class="fas fa-arrow-right"></i> MONEDA: BONUS VELOCIDAD</p>
+        <br>
+        <p>RUEDA <i class="fas fa-mouse"></i> <i class="fas fa-arrow-right"></i> ZOOM</p>
 
         <!-- <p>Posicion. <a id="9"></a></p> -->
         <!-- <p><a id="2"></a></p>
