--- a/js/index.html
+++ b/js/index.html
@@ -67,8 +67,9 @@
     </div>
 
     <div style="position:absolute; left:30px; top:10px" id="izda">
-        CONTROLES<br>
-        ------------
+        <h2 style="margin-bottom: -30px;">CONTROLES</h2><br>
+        <hr style="margin-bottom: 5px;">  
+        <!-- -------------------------------------- -->
         <p>W <i class="fas fa-arrow-right"></i> ADELANTE</p>
         <p>A <i class="fas fa-arrow-right"></i> IZQUIERDA</p>
         <p>S <i class="fas fa-arrow-right"></i> MARCHA ATRÁS</p>
@@ -78,8 +79,7 @@
         <p>B <i class="fas fa-arrow-right"></i> MONEDA: BONUS VELOCIDAD</p>
         <br>
         <p>RUEDA <i class="fas fa-mouse"></i> <i class="fas fa-arrow-right"></i> ZOOM</p>
-
-        <!-- <p>Posicion. <a id="9"></a></p> -->
+        <hr style="margin-bottom: 0px; margin-top: 5px;">        <!-- <p>Posicion. <a id="9"></a></p> -->
         <!-- <p><a id="2"></a></p>
         <p><a id="3"></a></p>
         <p>Seccion: <a id="4"></a></p>
