--- a/js/index.html
+++ b/js/index.html
@@ -75,8 +75,8 @@
         <p>S <i class="fas fa-arrow-right"></i> MARCHA ATRÁS</p>
         <p>D <i class="fas fa-arrow-right"></i> DERECHA</p>
         <br>
-        <p>B <i class="fas fa-arrow-right"></i> FRENO DE MANO / BONUS VELOCIDAD</p>
-        <p>B <i class="fas fa-arrow-right"></i> MONEDA: BONUS VELOCIDAD</p>
+        <p>B <i class="fas fa-arrow-right"></i> FRENO DE MANO</p>
+        <p>MONEDA<i class="fas fa-arrow-right"></i>  BONUS VELOCIDAD</p>
         <br>
         <p>RUEDA <i class="fas fa-mouse"></i> <i class="fas fa-arrow-right"></i> ZOOM</p>
         <hr style="margin-bottom: 0px; margin-top: 5px;">        <!-- <p>Posicion. <a id="9"></a></p> -->
