--- a/js/index.html
+++ b/js/index.html
@@ -82,7 +82,7 @@
         <br>
         <p>RUEDA <i class="fas fa-mouse"></i> <i class="fas fa-arrow-right"></i> ZOOM</p>
         <hr style="margin-bottom: 0px; margin-top: 5px;">
-        <p><input type="checkbox" name="shadows" value="shadows" id="shadows" > Activación sombras</p>
+        <p><input type="checkbox" name="shadows" value="shadows" id="shadows" ><b> ACTIVAR SOMBRAS</b></p>
     </div>
 
     <!-- Sección para indicar el nº de vuelta -->
